# ttyping

./: .gitignore  GEMINI.md  Makefile  README.md  code_review_input.txt  commit_msg.txt  commit_msg2.txt  fix_screens_lint.py  fix_screens_lint_v2.py  fix_screens_lint_v3.py  fix_server_lint.py  fix_words.py  fix_words_lint.py  fix_words_lint_v2.py  pyproject.toml  submit.sh  update_app.py  update_main.py  update_main_serve.py  update_render.py  update_words.py  update_wpm.py
.Jules/: palette.md
.github/workflows/: ci.yml  pypi.yml
.joles/: bolt.md
.jules/: bolt.md  learnings.md  palette.md  sentinel.md
src/ttyping/: __init__.py  __main__.py  app.py  screens.py  screens.py.diff  server.py  storage.py  words.py
src/ttyping/data/: en_dvorak.txt  en_lorem_ipsum.txt  en_qwerty.txt  en_sentences.txt  javascript.txt  julia.txt  ko.txt  ko_2set.txt  ko_3set.txt  ko_lorem_ipsum.txt  ko_sentences.txt  markdown.txt  python.txt  r.txt  rust.txt  typst.txt
tests/: conftest.py  test_app_logic.py  test_config.py  test_logic.py  test_main.py  test_navigation.py  test_screens.py  test_security.py  test_security_config.py  test_server.py  test_storage.py  test_target_accuracy.py  test_words.py
